adds new route
