# swagger.json
@@ -416,6 +416,45 @@
             "content": {}
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Adds user's physiological data and list of products not recommended to eat",
+        "parameters": [],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {
+          "description": "User's physiological data",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserInfoRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddUserInfoResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - login or password  is wrong",
+            "content": {}
+          }
+        }
       }
     },
     "/products/:id": {
@@ -646,8 +685,68 @@
             ]
           }
         }
+      },
+      "UserInfoRequest": {
+        "type": "object",
+        "required": [
+          "height",
+          "weight",
+          "desiredWeight",
+          "age",
+          "bloodGroup",
+          "productsNotAllowed"
+        ],
+        "properties": {
+          "height" : {
+            "type": "number",
+            "description": "User's height",
+            "example": 178
+          },
+          "weight" : {
+            "type": "number",
+            "description": "User's weight",
+            "example": 63
+          },
+          "desiredWeight" : {
+            "type": "number",
+            "description": "User's desired weight",
+            "example": 60
+          },
+          "age" : {
+            "type": "number",
+            "description": "User's age",
+            "example": 34
+          },
+          "bloodGroup": {
+            "type": "number",
+            "description": "User's bloodGroup",
+            "example": 2
+          },
+          "productsNotAllowed": [
+            "мучные",
+            "молочные",
+            "мясо"
+          ]
+        }
+      },
+      "AddUserInfoResponse" : {
+        "type": "object",
+        "items": {
+          "type": "object",
+          "properties": {
+            "message": {
+              "type": "object",
+              "description": "Response",
+              "example": {
+                "message": "User's physiological data successfully added"
+              }
+            }
+          },
+        "example": {
+          "message": "User's physiological data successfully added"
+        }
       }
-      ,
+    },
       "LogoutRequest": {
         "type": "object",
         "required": [
